new build endpoints, openapi doc updated
