# src/main/java/com/zylitics/front/model/RunningBuild.java
@@ -1,0 +1,70 @@
+package com.zylitics.front.model;
+
+public class RunningBuild {
+  
+  private int buildId;
+  
+  private String buildKey;
+  
+  private String buildName;
+  
+  private String shotBucket;
+  
+  private String os;
+  
+  private String browserName;
+  
+  public int getBuildId() {
+    return buildId;
+  }
+  
+  public RunningBuild setBuildId(int buildId) {
+    this.buildId = buildId;
+    return this;
+  }
+  
+  public String getBuildKey() {
+    return buildKey;
+  }
+  
+  public RunningBuild setBuildKey(String buildKey) {
+    this.buildKey = buildKey;
+    return this;
+  }
+  
+  public String getBuildName() {
+    return buildName;
+  }
+  
+  public RunningBuild setBuildName(String buildName) {
+    this.buildName = buildName;
+    return this;
+  }
+  
+  public String getShotBucket() {
+    return shotBucket;
+  }
+  
+  public RunningBuild setShotBucket(String shotBucket) {
+    this.shotBucket = shotBucket;
+    return this;
+  }
+  
+  public String getOs() {
+    return os;
+  }
+  
+  public RunningBuild setOs(String os) {
+    this.os = os;
+    return this;
+  }
+  
+  public String getBrowserName() {
+    return browserName;
+  }
+  
+  public RunningBuild setBrowserName(String browserName) {
+    this.browserName = browserName;
+    return this;
+  }
+}
